@@ -1,0 +1,5 @@
+\begin{theindex}
+
+  \item entryA[[delim0]]1[[sfx 3p]], a[[sfx 3p]], A[[sfx 3p]]
+
+\end{theindex}
